--- a/src/index.html
+++ b/src/index.html
@@ -28,10 +28,10 @@
           </div>
 
           <!-- Desktop Menu -->
-          <div class="hidden lg:flex items-center space-x-8">
+          <div class="hidden lg:flex items-center space-x-7">
             <div class="relative group">
               <button
-                class="text-center justify-start text-gray-800 text-base font-semibold leading-normal flex gap-2 items-center cursor-pointer">Helsiki
+                class="text-center justify-start text-gray-800 text-base font-semibold leading-normal flex gap-2 items-center cursor-pointer group-hover:bg-white px-3 py-1 rounded-lg ">Helsiki
                 <span><img src="./img/arrow-down.png" alt="arrow-down"></span></button>
               <div class="dropdown absolute bg-white shadow-lg rounded-md mt-0 z-10 w-40">
                 <a href="#" class="block px-4 py-2 text-gray-800 hover:bg-gray-100 text-base font-medium">Option 1</a>
@@ -40,7 +40,7 @@
             </div>
             <div class="relative group">
               <button
-                class="text-center justify-start text-gray-800 text-base font-semibold leading-normal flex gap-2 items-center cursor-pointer">Ski
+                class="text-center justify-start text-gray-800 text-base font-semibold leading-normal flex gap-2 items-center cursor-pointer group-hover:bg-white px-3 py-1 rounded-lg ">Ski
                 <span><img src="./img/arrow-down.png" alt="arrow-down"></span></button>
               <div class="dropdown absolute bg-white shadow-lg rounded-md mt-0 z-10 w-40">
                 <a href="#" class="block px-4 py-2 text-gray-800 hover:bg-gray-100 text-base font-medium">Option 1</a>
@@ -49,7 +49,7 @@
             </div>
             <div class="relative group">
               <button
-                class="text-center justify-start text-gray-800 text-base font-semibold leading-normal flex gap-2 items-center cursor-pointer">Winter
+                class="text-center justify-start text-gray-800 text-base font-semibold leading-normal flex gap-2 items-center cursor-pointer group-hover:bg-white px-3 py-1 rounded-lg ">Winter
                 Adventure <span><img src="./img/arrow-down.png" alt="arrow-down"></span></button>
               <div class="dropdown absolute bg-white shadow-lg rounded-md mt-0 z-10 w-40">
                 <a href="#" class="block px-4 py-2 text-gray-800 hover:bg-gray-100 text-base font-medium">Option 1</a>
@@ -58,7 +58,7 @@
             </div>
             <div class="relative group">
               <button
-                class="text-center justify-start text-gray-800 text-base font-semibold leading-normal flex gap-2 items-center cursor-pointer">About
+                class="text-center justify-start text-gray-800 text-base font-semibold leading-normal flex gap-2 items-center cursor-pointer group-hover:bg-white px-3 py-1 rounded-lg ">About
                 Us <span><img src="./img/arrow-down.png" alt="arrow-down"></span></button>
               <div class="dropdown absolute bg-white shadow-lg rounded-md mt-0 z-10 w-40">
                 <a href="#" class="block px-4 py-2 text-gray-800 hover:bg-gray-100 text-base font-medium">Option 1</a>
@@ -98,7 +98,7 @@
         <div class="px-2 pt-2 pb-3 space-y-5 sm:px-3 text-center">
           <div class="relative group">
             <button
-              class="mobile-dropdown-toggle text-center justify-center text-gray-800 text-base font-semibold leading-normal flex gap-2 w-full  ">Helsiki
+              class="mobile-dropdown-toggle text-center justify-center text-gray-800 text-base font-semibold leading-normal flex gap-2 w-full group-hover:bg-white px-3 py-1 rounded-lg   ">Helsiki
               <span><img src="./img/arrow-down.png" alt="arrow-down"></span></button>
             <div class="mobile-dropdown hidden bg-white shadow-lg rounded-md mt-0 z-10">
               <a href="#" class="block px-4 py-2 text-gray-800 hover:bg-gray-100 text-base font-medium">Option 1</a>
@@ -107,7 +107,7 @@
           </div>
           <div class="relative group">
             <button
-              class="mobile-dropdown-toggle text-center justify-center text-gray-800 text-base font-semibold leading-normal flex gap-2 w-full  ">Ski
+              class="mobile-dropdown-toggle text-center justify-center text-gray-800 text-base font-semibold leading-normal flex gap-2 w-full group-hover:bg-white px-3 py-1 rounded-lg   ">Ski
               <span><img src="./img/arrow-down.png" alt="arrow-down"></span></button>
             <div class="mobile-dropdown hidden bg-white shadow-lg rounded-md mt-0 z-10">
               <a href="#" class="block px-4 py-2 text-gray-800 hover:bg-gray-100 text-base font-medium">Option 1</a>
@@ -116,7 +116,7 @@
           </div>
           <div class="relative group">
             <button
-              class="mobile-dropdown-toggle text-center justify-center text-gray-800 text-base font-semibold leading-normal flex gap-2 w-full  ">Winter
+              class="mobile-dropdown-toggle text-center justify-center text-gray-800 text-base font-semibold leading-normal flex gap-2 w-full group-hover:bg-white px-3 py-1 rounded-lg   ">Winter
               Adventure <span><img src="./img/arrow-down.png" alt="arrow-down"></span></button>
             <div class="mobile-dropdown hidden bg-white shadow-lg rounded-md mt-0 z-10">
               <a href="#" class="block px-4 py-2 text-gray-800 hover:bg-gray-100 text-base font-medium">Option 1</a>
@@ -125,7 +125,7 @@
           </div>
           <div class="relative group">
             <button
-              class="mobile-dropdown-toggle text-center justify-center text-gray-800 text-base font-semibold leading-normal flex gap-2 w-full  ">About
+              class="mobile-dropdown-toggle text-center justify-center text-gray-800 text-base font-semibold leading-normal flex gap-2 w-full group-hover:bg-white px-3 py-1 rounded-lg   ">About
               Us <span><img src="./img/arrow-down.png" alt="arrow-down"></span></button>
             <div class="mobile-dropdown hidden bg-white shadow-lg rounded-md mt-0 z-10">
               <a href="#" class="block px-4 py-2 text-gray-800 hover:bg-gray-100 text-base font-medium">Option 1</a>
@@ -204,7 +204,7 @@
         <div class="">
           <div
             class="flex md:justify-between gap-6 flex-wrap items-center absolute lg:bottom-[10%] bottom-5 left-0 right-0 mx-auto  justify-center w-full containers">
-            <ul class="flex justify-center items-center gap-x-8 px-4 py-2.5 bg-white rounded-lg ">
+            <ul class="flex justify-center items-center gap-x-8 px-4 py-2.5 bg-white rounded-lg leading-[0px]">
               <li><a href=""
                   class="hover:shadow-[5px_5px_10px_0px_rgba(0,0,0,0.10)] hover:translate-y-0.5 transform transition-all duration-200 inline-block"><img
                     src="./img/facebook.svg" alt="facebook"></a></li>
